[BATCHEE-141][BATCHEE-142] add cdise lifecycle for cli module + upgrade tomee + upgrade some mvn plugins